<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ItemDetailFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:layout_marginHorizontal="@dimen/cardView_margin"
        android:layout_marginTop="@dimen/cardView_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvItemInfoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tvItemInfoName_text"
                android:textSize="@dimen/tvItemInfoVarTitle_size"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvItemInfoNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tvItemInfoValue_margin"
                android:text="Televisión Samsung 40 pulgadas"
                android:textSize="@dimen/tvItemInfoVarValue_size"
                app:layout_constraintStart_toStartOf="@+id/tvItemInfoName"
                app:layout_constraintTop_toBottomOf="@+id/tvItemInfoName" />

            <TextView
                android:id="@+id/tvItemInfoId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/tvItemInfoId_text"
                android:textSize="@dimen/tvItemInfoVarTitle_size"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="@+id/tvItemInfoNameValue"
                app:layout_constraintTop_toBottomOf="@+id/tvItemInfoNameValue" />

            <TextView
                android:id="@+id/tvItemInfoIdValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tvItemInfoValue_margin"
                android:layout_marginBottom="16dp"
                android:text="116"
                android:textSize="@dimen/tvItemInfoVarValue_size"
                app:layout_constraintStart_toStartOf="@+id/tvItemInfoId"
                app:layout_constraintTop_toBottomOf="@+id/tvItemInfoId" />

            <TextView
                android:id="@+id/tvItemInfoPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/tvItemInfoPrice_text"
                android:textSize="@dimen/tvItemInfoVarTitle_size"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="@+id/tvItemInfoIdValue"
                app:layout_constraintTop_toBottomOf="@+id/tvItemInfoIdValue" />

            <TextView
                android:id="@+id/tvItemInfoPriceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tvItemInfoValue_margin"
                android:text="699,99€"
                android:textSize="@dimen/tvItemInfoVarValue_size"
                app:layout_constraintStart_toStartOf="@+id/tvItemInfoPrice"
                app:layout_constraintTop_toBottomOf="@+id/tvItemInfoPrice" />

            <TextView
                android:id="@+id/tvItemInfoType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/tvItemInfoType_text"
                android:textSize="@dimen/tvItemInfoVarTitle_size"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="@+id/tvItemInfoPriceValue"
                app:layout_constraintTop_toBottomOf="@+id/tvItemInfoPriceValue" />

            <TextView
                android:id="@+id/tvItemInfoTypeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tvItemInfoValue_margin"
                android:text="Producto"
                android:textSize="@dimen/tvItemInfoVarValue_size"
                app:layout_constraintStart_toStartOf="@+id/tvItemInfoType"
                app:layout_constraintTop_toBottomOf="@+id/tvItemInfoType" />

            <TextView
                android:id="@+id/tvItemInfoDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/tvItemInfoDescription_text"
                android:textSize="@dimen/tvItemInfoVarTitle_size"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="@+id/tvItemInfoTypeValue"
                app:layout_constraintTop_toBottomOf="@+id/tvItemInfoTypeValue" />

            <TextView
                android:id="@+id/tvItemInfoDescriptionValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tvItemInfoValue_margin"
                android:layout_marginEnd="24dp"
                android:justificationMode="inter_word"
                android:text="Más de 1.000 millones de colores. 100% Volumen de color. Convierte la luz en más de 1.000 millones de colores, a cualquier nivel de brillo, con la tecnología inorgánica Quantum dot de la serie Q64B, exclusiva de Samsung."
                android:textSize="@dimen/tvItemInfoVarValue_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvItemInfoDescription"
                app:layout_constraintTop_toBottomOf="@+id/tvItemInfoDescription" />

            <TextView
                android:id="@+id/tvItemInfoTaxable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/tvItemInfoTaxable_text"
                android:textSize="@dimen/tvItemInfoVarTitle_size"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="@+id/tvItemInfoDescriptionValue"
                app:layout_constraintTop_toBottomOf="@+id/tvItemInfoDescriptionValue" />

            <TextView
                android:id="@+id/tvItemInfoTaxableValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tvItemInfoValue_margin"
                android:layout_marginBottom="16dp"
                android:text=""
                android:textSize="@dimen/tvItemInfoVarValue_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvItemInfoTaxable"
                app:layout_constraintTop_toBottomOf="@+id/tvItemInfoTaxable" />

            <TextView
                android:id="@+id/tvItemInfoTax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textSize="@dimen/tvItemInfoVarTitle_size"
                android:textStyle="bold|italic"
                android:text="@string/tvItemInfoTax_text"
                app:layout_constraintEnd_toEndOf="@+id/tvItemInfoDescriptionValue"
                app:layout_constraintTop_toBottomOf="@+id/tvItemInfoDescriptionValue" />

            <TextView
                android:id="@+id/tvItemInfoTaxValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:text=""
                android:textSize="@dimen/tvItemInfoVarValue_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvItemInfoTax"
                app:layout_constraintTop_toBottomOf="@+id/tvItemInfoTax" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imgItemInfo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewInfo"
        tools:src="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>